--- a/laborator04/PhoneDialer/app/src/main/res/layout/activity_phone_dialer.xml
+++ b/laborator04/PhoneDialer/app/src/main/res/layout/activity_phone_dialer.xml
@@ -40,7 +40,7 @@
             android:background="@drawable/backspace"
             android:layout_row="0"
             android:layout_column="2"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:layout_gravity="center"
             />
 
@@ -156,6 +156,15 @@
             android:layout_row="5"
             android:layout_gravity="center"
 
+            />
+
+        <Button
+            android:id="@+id/add_contact"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/contacts"
+            android:layout_column="1"
+            android:layout_row="5"
             />
 
         <ImageButton
